@@ -42,7 +42,7 @@
       },
       "runtime" : {
          "requires" : {
-            "List::MoreUtils" : "0",
+            "List::MoreUtils" : "0.28",
             "Params::Validate" : "0",
             "perl" : "5.008001"
          }
