@@ -2,6 +2,13 @@ Revision history for Perl extension Array-2D
 
 {{$NEXT}}
 
+    - Use any, all, none from List::MoreUtils instead of List::Util,
+      since we are already requiring List::MoreUtils and those were
+      only added to List::Util relatively recently.
+
+    - Required a version of List::MoreUtils with current behavior for
+      any, all, and none.  Version 0.28 came out in 2010.
+
 0.001_001 2017-06-26T07:07:24Z
 
     - original version
